replace sheettype radio input+span with buttons

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -133,7 +133,7 @@ input.sheet-edition-toggle[value="2"] ~ * .sheet-1st {
     display: none !important;
 }
 
-span.sheet-edition {
+.sheet-edition {
     font-weight: bold;
 }
 
@@ -249,18 +249,51 @@ input.sheet-page3-sheet:checked ~ .sheet-background-image::after{
     height: 200px;
 }
 
+button.sheet-toggle {
+    /* Resetting user-agent styling */
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+    overflow: visible;
+    text-transform: none;
+    border-style: none;
+
+    padding: 0 2px;
+    background: white;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
 input.sheet-attr:checked + span.sheet-attr,
 .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
+input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name,
+input.sheet-type-toggle[value="mortal1"] ~ * button.sheet-active-mortal1,
+input.sheet-type-toggle[value="mortal2"] ~ * button.sheet-active-mortal2,
+input.sheet-type-toggle[value="vampire1"] ~ * button.sheet-active-vampire1,
+input.sheet-type-toggle[value="vampire2"] ~ * button.sheet-active-vampire2,
+input.sheet-type-toggle[value="werewolf1"] ~ * button.sheet-active-werewolf1,
+input.sheet-type-toggle[value="werewolf2"] ~ * button.sheet-active-werewolf2,
+input.sheet-type-toggle[value="mage1"] ~ * button.sheet-active-mage1,
+input.sheet-type-toggle[value="mage2"] ~ * button.sheet-active-mage2,
+input.sheet-type-toggle[value="promethean1"] ~ * button.sheet-active-promethean1,
+input.sheet-type-toggle[value="promethean2"] ~ * button.sheet-active-promethean2,
+input.sheet-type-toggle[value="changeling1"] ~ * button.sheet-active-changeling1,
+input.sheet-type-toggle[value="changeling2"] ~ * button.sheet-active-changeling2,
+input.sheet-type-toggle[value="hunter"] ~ * button.sheet-active-hunter,
+input.sheet-type-toggle[value="geist1"] ~ * button.sheet-active-geist1,
+input.sheet-type-toggle[value="geist2"] ~ * button.sheet-active-geist2,
+input.sheet-type-toggle[value="mummy1"] ~ * button.sheet-active-mummy1,
+input.sheet-type-toggle[value="mummy2"] ~ * button.sheet-active-mummy2,
+input.sheet-type-toggle[value="demon"] ~ * button.sheet-active-demon,
+input.sheet-type-toggle[value="beast"] ~ * button.sheet-active-beast {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
     font-weight: bold;
 }
 
-input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    font-weight: bold;
-}
-
+input.sheet-type-toggle[value="mortal1"] ~ * button.sheet-active-mortal1,
+input.sheet-type-toggle[value="mortal2"] ~ * button.sheet-active-mortal2,
 input.sheet-game-line-toggle[value="mortal"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="mortal"] ~ * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="mortal"] ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
@@ -268,6 +301,8 @@ input.sheet-game-line-toggle[value="mortal"] ~ * input.sheet-weapon:checked + sp
     color: #2A2D80;
 }
 
+input.sheet-type-toggle[value="vampire1"] ~ * button.sheet-active-vampire1,
+input.sheet-type-toggle[value="vampire2"] ~ * button.sheet-active-vampire2,
 input.sheet-game-line-toggle[value="vampire"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="vampire"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="vampire"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -276,7 +311,8 @@ input.sheet-game-line-toggle[value="vampire"] ~ * input.sheet-weapon:checked + s
     color: #B21800;
 }
 
-input.sheet-game-line-toggle[value="werewolf"] + span.sheet-attr,
+input.sheet-type-toggle[value="werewolf1"] ~ * button.sheet-active-werewolf1,
+input.sheet-type-toggle[value="werewolf2"] ~ * button.sheet-active-werewolf2,
 input.sheet-game-line-toggle[value="werewolf"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="werewolf"] ~ * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="werewolf"] ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
@@ -284,6 +320,8 @@ input.sheet-game-line-toggle[value="werewolf"] ~ * input.sheet-weapon:checked + 
     color: #E9813E;
 }
 
+input.sheet-type-toggle[value="mage1"] ~ * button.sheet-active-mage1,
+input.sheet-type-toggle[value="mage2"] ~ * button.sheet-active-mage2,
 input.sheet-game-line-toggle[value="mage"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="mage"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="mage"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -292,6 +330,8 @@ input.sheet-game-line-toggle[value="mage"] ~ * input.sheet-weapon:checked + span
     color: #0000FF;
 }
 
+input.sheet-type-toggle[value="promethean1"] ~ * button.sheet-active-promethean1,
+input.sheet-type-toggle[value="promethean2"] ~ * button.sheet-active-promethean2,
 input.sheet-game-line-toggle[value="promethean"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="promethean"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="promethean"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -300,6 +340,8 @@ input.sheet-game-line-toggle[value="promethean"] ~ * input.sheet-weapon:checked 
     color: #660099;
 }
 
+input.sheet-type-toggle[value="changeling1"] ~ * button.sheet-active-changeling1,
+input.sheet-type-toggle[value="changeling2"] ~ * button.sheet-active-changeling2,
 input.sheet-game-line-toggle[value="changeling"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="changeling"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="changeling"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -308,6 +350,8 @@ input.sheet-game-line-toggle[value="changeling"] ~ * input.sheet-weapon:checked 
     color: #006600;
 }
 
+input.sheet-type-toggle[value="geist1"] ~ * button.sheet-active-geist1,
+input.sheet-type-toggle[value="geist2"] ~ * button.sheet-active-geist2,
 input.sheet-game-line-toggle[value="geist"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="geist"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="geist"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -316,6 +360,8 @@ input.sheet-game-line-toggle[value="geist"] ~ * input.sheet-weapon:checked + spa
     color: #00CCFF;
 }
 
+input.sheet-type-toggle[value="mummy1"] ~ * button.sheet-active-mummy1,
+input.sheet-type-toggle[value="mummy2"] ~ * button.sheet-active-mummy2,
 input.sheet-game-line-toggle[value="mummy"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="mummy"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="mummy"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -324,6 +370,7 @@ input.sheet-game-line-toggle[value="mummy"] ~ * input.sheet-weapon:checked + spa
     color: #996600;
 }
 
+input.sheet-type-toggle[value="demon"] ~ * button.sheet-active-demon,
 input.sheet-game-line-toggle[value="demon"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="demon"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="demon"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -332,6 +379,7 @@ input.sheet-game-line-toggle[value="demon"] ~ * input.sheet-weapon:checked + spa
     color: #2A2D80;
 }
 
+input.sheet-type-toggle[value="beast"] ~ * button.sheet-active-beast,
 input.sheet-game-line-toggle[value="beast"] + span.sheet-attr,
 input.sheet-game-line-toggle[value="beast"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="beast"] ~ * input.sheet-attr:checked + span.sheet-attr,
@@ -340,7 +388,8 @@ input.sheet-game-line-toggle[value="beast"] ~ * input.sheet-weapon:checked + spa
     color: #2A2D80;
 }
 
-input.sheet-game-line-toggle[value="hunter"] + span.sheet-attr,
+input.sheet-type-toggle[value="hunter"] ~ * button.sheet-active-hunter,
+input.sheet-game-line-toggle[value="hunter"] ~ * button.active-hunter,
 input.sheet-game-line-toggle[value="hunter"] ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="hunter"] ~ * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-game-line-toggle[value="hunter"] ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
