add missing mortal2 display styling

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -50,6 +50,7 @@
 input.sheet-type-toggle[value="mortal1"] ~ * .sheet-mortal,
 input.sheet-type-toggle[value="mortal1"] ~ * .sheet-mortal1,
 input.sheet-type-toggle[value="mortal2"] ~ * .sheet-mortal,
+input.sheet-type-toggle[value="mortal2"] ~ * .sheet-mortal2,
 input.sheet-type-toggle[value="vampire2"] ~ * .sheet-vampire2,
 input.sheet-type-toggle[value="vampire1"] ~ * .sheet-vampire,
 input.sheet-type-toggle[value="vampire1"] ~ * .sheet-vampire1,
@@ -88,6 +89,7 @@ input.sheet-type-toggle[value="hunter"] ~ * .sheet-hunter {
 input.sheet-type-toggle[value="mortal1"] ~ * table.sheet-mortal,
 input.sheet-type-toggle[value="mortal1"] ~ * table.sheet-mortal1,
 input.sheet-type-toggle[value="mortal2"] ~ * table.sheet-mortal,
+input.sheet-type-toggle[value="mortal2"] ~ * table.sheet-mortal2,
 input.sheet-type-toggle[value="vampire2"] ~ * table.sheet-vampire2,
 input.sheet-type-toggle[value="vampire1"] ~ * table.sheet-vampire,
 input.sheet-type-toggle[value="vampire1"] ~ * table.sheet-vampire1,
