--- a/Paladin/paladin.css
+++ b/Paladin/paladin.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Viaoda+Libre&display=swap');
+@import url('https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap');
+
+
 /* GLOBALS
 	============================= */
 * {
@@ -7,7 +11,7 @@
 
 button {
   text-overflow: ellipsis;
-  font-family: serif;
+  font-family: 'Viaoda-Libre', serif;
   font-variant: small-caps;
 }
 
@@ -45,7 +49,7 @@ fieldset {
 h1 {
   color: #226aae;
   text-transform: capitalize;
-  font-family: serif;
+  font-family: 'UnifrakturMaguntia', serif;
 }
 
 h2 {
