begin refactoring names

--- a/Shadowrun4thEdition/src/pug/_npc.pug
+++ b/Shadowrun4thEdition/src/pug/_npc.pug
@@ -156,7 +156,7 @@
 				+rollButton('defense', 'base', '@{defense}')
 				label.settings(data-i18n-title='defense' title='defense')
 					input(name='attr_defense_modifier' placeholder='9' title='@{defense_modifier}' type='number' value='0')
-			each val, key in {'Soak': ['soak', 'soak'], 'Acid Protection': ['acid', 'acidprotection'], 'Cold Protection': ['cold', 'coldprotection'], 'Electrical Protection': ['electrical', 'electricalprotection'], 'Fire Protection': ['fire', 'fireprotection'], 'Radiation Protection': ['radiation', 'radiationprotection']}
+			each val, key in {'Soak': ['soak', 'soak'], 'Acid Protection': ['acid', 'Acid Protection'], 'Cold Protection': ['cold', 'Cold Protection'], 'Electrical Protection': ['electrical', 'Eletrical Protectio'], 'Fire Protection': ['fire', 'Fire Protection'], 'Radiation Protection': ['radiation', 'radiationprotection']}
 				.rows
 					+rollButton(val[1], 'base', '@{soak}+@{'+val[0]+'_modifier}')
 					label.settings(data-i18n-title=val[1] title=val[1])
