--- a/Shadowrun4thEdition/src/pug/_variables.pug
+++ b/Shadowrun4thEdition/src/pug/_variables.pug
@@ -24,7 +24,7 @@
 
 //- PROTECTIONS
 - const armorProcAbbrev = ['Acid', 'Cold', 'Elec', 'Fire', 'Radi', 'Laser', 'Gause'];
-- const armorProtections = ['Acid', 'Cold', 'Electrical', 'Fire', 'Radiation', 'Laser', 'Gause Round'];
+- const armorProtections = ['Acid', 'Cold', 'Electrical', 'Fire', 'Falling', 'Laser', 'Gause Round'];
 - const armorTypes = ['Ballistic', 'Impact']
 
 //- LOOP OBJECTS
