--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -224,7 +224,7 @@ include src/pug/_variables.pug
                     optgroup(label='Combat Skills' ) Combat Skills
                       option(data-i18n='firearmsgroup' value='@{firearms}' selected) Firearms Group
                       option(data-i18n='automatics' value='@{automatics}') Automatics
-                      option(data-i18n='archery' value='@{archery}') Archery
+                      option(data-i18n='Archery' value='@{Archery}') Archery
                       option(data-i18n='exoticrange' value='0') Exotic Range
                       option(data-i18n='heavyweapons' value='@{heavyweapons}') Heavy Weapons
                       option(data-i18n='longarms' value='@{longarms}') Longarms
@@ -266,7 +266,7 @@ include src/pug/_variables.pug
                   select(name=`attr_skill` title=`${meleeRepeatingSection}_skill}` value='@{closecombat}')
                     optgroup(label='Combat Skills' ) Combat Skills
                       option(data-i18n='closecombatgroup' value='@{closecombat}' selected) Close Combat Group
-                      option(data-i18n='blades' value='@{blades}') Blades
+                      option(data-i18n='Blades' value='@{Blades}') Blades
                       option(data-i18n='clubs' value='@{clubs}') Clubs
                       option(data-i18n='exoticmelee' value='0') Blades
                       option(data-i18n='unarmedcombat' value='@{unarmedcombat}') Unarmed Combat
@@ -299,7 +299,7 @@ include src/pug/_variables.pug
                 span.bold(name='attr_name')
               each val in armorTypes
                 - const attrName = val.toLowerCase();
-                button(name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=@{name}}}{{base= ^{armor}}}{{dice=[[((@{${attrName}}+@{body}+@{modifier})`+noWoundsRollEnding)
+                button(name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=@{name}}}{{base=^{armor}}}{{dice=[[((@{${attrName}}+@{body}+@{modifier})`+noWoundsRollEnding)
                   span.center(name=`attr_${attrName}`)
               input.collapse-flag(name='attr_display_flag' type='checkbox')
               span.pictos i
@@ -308,7 +308,7 @@ include src/pug/_variables.pug
               .collapse
                 each val in armorProtections
                   - const attrName = val.toLowerCase().replace(' ', '_');
-                  - const datai18n = val === 'Gause Round' ? 'Gause Round' : `${attrName}protection`;
+                  - const datai18n = val === 'Gause Round' ? 'Gause Round' : `${val} Protection`;
                   input(type='hidden' name=`attr_${attrName}`)
                   button(data-i18n=datai18n name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=^{${attrName}}}}{{base=^{armor}}}{{dice=[[((@{${attrName}}+@{body}+@{modifier}+@{${attrName}})`+noWoundsRollEnding)
                 .row
@@ -660,6 +660,7 @@ script(type="text/worker")
   include src/js/attributes.js
 
   include src/js/Classes/PrimaryWeapon.js
+  include src/js/Classes/PrimaryArmor.js
 
   include src/js/processingFunctions.js
 
