fix attribute changes

--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -266,7 +266,7 @@ include src/pug/_variables.pug
                   select(name=`attr_skill` title=`${meleeRepeatingSection}_skill}` value='@{closecombat}')
                     optgroup(label='Combat Skills' ) Combat Skills
                       option(data-i18n='closecombatgroup' value='@{closecombat}' selected) Close Combat Group
-                      option(data-i18n='Blades' value='@{Blades}') Blades
+                      option(data-i18n='blades' value='@{blades}') Blades
                       option(data-i18n='clubs' value='@{clubs}') Clubs
                       option(data-i18n='exoticmelee' value='0') Blades
                       option(data-i18n='unarmedcombat' value='@{unarmedcombat}') Unarmed Combat
