save progress. commlinks added

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -56,7 +56,7 @@ label {
   width: auto; }
 
 input {
-  background-color: #9a9a9a;
+  background-color: rgba(28, 28, 28, 0.14902);
   color: #333;
   border: none;
   cursor: auto;
@@ -66,13 +66,13 @@ input {
   vertical-align: middle; }
   input[type='text'], input[type='number'] {
     height: 20px; }
-    input[type='text']:hover, input[type='text']:focus, input[type='number']:hover, input[type='number']:focus {
-      background-color: #d2d1cd;
-      color: #1c1c1c; }
     input[type='text']:placeholder-shown, input[type='number']:placeholder-shown {
       border: 1px dotted #555;
       background-color: rgba(28, 28, 28, 0.14902);
       color: white; }
+    input[type='text']:hover, input[type='text']:focus, input[type='number']:hover, input[type='number']:focus {
+      background-color: #afd3e2;
+      color: #1c1c1c; }
   input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; }
@@ -158,14 +158,14 @@ input.sheet-toggle {
 .sheet-red {
   color: #1e4583; }
 
-.sheet-text-align-center,
-.sheet-center {
-  text-align: center; }
-
 .sheet-eclipse {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap; }
+
+.sheet-text-align-center,
+.sheet-center {
+  text-align: center; }
 
 .sheet-text-capitalize {
   text-transform: capitalize; }
@@ -177,6 +177,9 @@ input.sheet-toggle {
 .sheet-settings-flag input[type='checkbox'] + span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after, .editmode ~ .repcontrol .repcontrol_edit:after, .itemcontrol .repcontrol_del {
   font-family: 'Pictos'; }
+
+span.sheet-pictos-custom {
+  font-family: 'Pictos Custom'; }
 
 .sheet-font-bold {
   font-weight: bold; }
@@ -297,12 +300,6 @@ div.sheet-matrix-device .sheet-matrixData {
   box-shadow: 0px 0px 29px 8px  #88dd04; }
 div.sheet-matrix-device .sheet-matrixFirewall {
   box-shadow: 0px 0px 29px 8px  #f88703; }
-
-.sheet-text-capitalize {
-  text-transform: capitalize; }
-
-.sheet-text-left {
-  text-align: left; }
 
 /***************************************************************************************/
 /************************** START OF THE PC SHEET *************************************/
@@ -991,6 +988,37 @@ div.sheet-matrix-device .sheet-matrixFirewall {
         grid-template-columns: 1fr 3em 1em 1em; }
   .sheet-pc div.sheet-matrix h3 {
     color: #333; }
+  .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem {
+    grid-template-columns: auto 1fr auto 1fr; }
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem label[data-i18n-title='notes'],
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem h3[data-i18n='notes'],
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem div.sheet-collapse {
+      grid-column: 1 / 6; }
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-collapse-flag {
+      grid-area: 1 / 4 / 1 / 5; }
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .sheet-settings-flag input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-settings-flag .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input[type='checkbox'].sheet-collapse-flag + span, .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_edit:after, .repcontrol .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-collapse-flag + span.repcontrol_edit:after,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_add:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-collapse-flag + span.repcontrol_add:after, .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .itemcontrol input.sheet-collapse-flag + span.repcontrol_del, .itemcontrol .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-collapse-flag + span.repcontrol_del {
+      grid-area: 1 / 4 / 1 / 5; }
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-settings-flag,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-settings-flag + span.sheet-pictos,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .sheet-settings-flag input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-settings-flag .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .repcontrol input.sheet-settings-flag + span.repcontrol_edit:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-settings-flag + span.repcontrol_edit:after,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .repcontrol input.sheet-settings-flag + span.repcontrol_add:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-settings-flag + span.repcontrol_add:after,
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .itemcontrol input.sheet-settings-flag + span.repcontrol_del,
+    .itemcontrol .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input.sheet-settings-flag + span.repcontrol_del {
+      grid-area: 1 / 5 / 1 / 6; }
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem input:not([value='']) {
+      background-color: transparent; }
+    .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .sheet-con-hex {
+      grid-column: 1 / 5; }
   .sheet-pc div.sheet-matrix div.sheet-programs div.repitem {
     grid-template-columns: 1em 1fr 1.5em 1em 1em; }
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem label[data-i18n-title='notes'],
@@ -1682,7 +1710,7 @@ div.sheet-right-header {
     width: 25%; }
   .sheet-matrix .sheet-con-hex input[type='radio']:hover ~ h2 {
     color: #fff;
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px whitesmoke; }
+    text-shadow: 1px 1px 2px black, 0 0 25px #1e4583, 0 0 5px whitesmoke; }
   .sheet-matrix .sheet-con-hex h2 {
     vertical-align: top; }
 
