--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -9,6 +9,7 @@
 	@import 'src/scss/base/_base'; 
   @import 'src/scss/base/_placeholders'; 
   @import 'src/scss/base/_generic'; 
+  @import 'src/scss/base/_typography'; 
 
 /* SWITCHES
 	============================= */
@@ -35,14 +36,6 @@
 
 /***** GENERIC STYLES *****/
 @import 'src/scss/_matrixdevice'; 
-
-.sheet-text-capitalize {
-	text-transform: capitalize;
-}
-
-.sheet-text-left {
-  text-align: left;
-}
 
 /***************************************************************************************/
 /************************** START OF THE PC SHEET *************************************/
@@ -720,6 +713,23 @@
 		/*** MATRIX ****/
 		div.sheet-matrix {
 			h3 { color: $blacker; }
+
+      div.sheet-commlinks {
+        $commlinkGrid: auto 1fr auto 1fr;
+
+        div.repitem{
+          grid-template-columns: $commlinkGrid;
+          @include repeatingInformation(6, false);
+
+          input:not([value='']) {
+            background-color: transparent;
+          }
+
+          .sheet-con-hex {
+            grid-column: 1 / 5;
+          }
+        }
+      }
 
 			div.sheet-programs {
 				$programGrid: 1em 1fr 1.5em 1em 1em;
