--- a/Shadowrun4thEdition/src/pug/_npc.pug
+++ b/Shadowrun4thEdition/src/pug/_npc.pug
@@ -156,14 +156,14 @@
 				+rollButton('defense', 'base', '@{defense}')
 				label.settings(data-i18n-title='defense' title='defense')
 					input(name='attr_defense_modifier' placeholder='9' title='@{defense_modifier}' type='number' value='0')
-			each val, key in {'Soak': ['soak', 'soak'], 'Acid Protection': ['acid', 'Acid Protection'], 'Cold Protection': ['cold', 'Cold Protection'], 'Electrical Protection': ['electrical', 'Eletrical Protectio'], 'Fire Protection': ['fire', 'Fire Protection'], 'Radiation Protection': ['radiation', 'radiationprotection']}
+			each val, key in {'Soak': ['soak', 'soak'], 'Acid Protection': ['acid', 'Acid Protection'], 'Cold Protection': ['cold', 'Cold Protection'], 'Electrical Protection': ['electrical', 'Electrical Protection'], 'Fire Protection': ['fire', 'Fire Protection'], 'Radiation Protection': ['radiation', 'Radiation Protection']}
 				.rows
-					+rollButton(val[1], 'base', '@{soak}+@{'+val[0]+'_modifier}')
-					label.settings(data-i18n-title=val[1] title=val[1])
+					+rollButton(key, 'base', '@{soak}+@{'+val[0]+'_modifier}')
+					label.settings(data-i18n-title=key title=key)
 						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
-					if (key === 'Defense' || key === 'Soak')
+					if (key === 'Soak')
 						span.settings.tiny-span() =
-						span(name='attr_'+val[0])
+						span(name=`attr_${val[0]}`)
 
 		///- OPTIONS
 		.column
