--- a/Shadowrun4thEdition/src/pug/_variables.pug
+++ b/Shadowrun4thEdition/src/pug/_variables.pug
@@ -24,7 +24,8 @@
 
 //- PROTECTIONS
 - const armorProcAbbrev = ['Acid', 'Cold', 'Elec', 'Fire', 'Radi', 'Laser', 'Gause'];
-- const armorProtections = ['Acid', 'Cold', 'Electrical', 'Fire', 'Falling', 'Laser', 'Gause Round'];
+- const armorProtectionsButtons = ['Acid', 'Cold', 'Electrical', 'Fire', 'Falling'];
+- const armorProtectionsInputs = ['Acid', 'Cold', 'Electrical', 'Fire', 'Radiation'];
 - const armorTypes = ['Ballistic', 'Impact']
 
 //- LOOP OBJECTS
@@ -39,7 +40,7 @@
 //- PC MAGIC
 - const pcCoreSpellObject = {'Name': {'type': 'text', 'placeholder': 'Fireball'}, 'Type': {'type': 'select', 'default': 'physical', 'array': spellTypes}, 'Range': {'type': 'select', 'default': 'los', 'array':spellRanges}, 'Duration': {'type': 'select', 'default': 'instant', 'array':spellDurations}, 'Drain': {'type': 'number', 'placeholder': '-1'}};
 - const pcCatagorySpellObject = {'Category': {'type': 'select', 'default': 'combat', 'array': spellCatagories}, 'Combat': {'type': 'select', 'default': 'force', 'array':spellCombatTypes}, 'Damage': {'type': 'text', 'placeholder': 'P'}};
-- const pcAlchemySpellObject = {'Skill': {'type': 'select', 'default': '@{alchemy}', 'array':['Alchemy']}, 'Specialization': {'type': 'checkbox', 'default': '2'}, 'modifier dice': {'type': 'number', 'placeholder': '0', 'default': '0'}};
+- const pcAlchemySpellObject = {'Skill': {'type': 'select', 'default': '@{enchanting}', 'array':['Enchanting']}, 'Specialization': {'type': 'checkbox', 'default': '2'}, 'modifier dice': {'type': 'number', 'placeholder': '0', 'default': '0'}};
 - const pcSorcerySpellObject = {'Skill': {'type': 'select', 'default': '@{spellcasting}', 'array':['Sorcery Group', 'Spellcasting']}, 'Specialization': {'type': 'checkbox', 'default': '2'}, 'modifier dice': {'type': 'number', 'placeholder': '0', 'default': '0'}};
 
 //- PC MATRIX
