--- a/Shadowrun4thEdition/src/scss/base/_base.scss
+++ b/Shadowrun4thEdition/src/scss/base/_base.scss
@@ -73,7 +73,7 @@
 		width: auto;}
 
 	input {
-		background-color: $lightgray;
+		background-color: $graytrans;
 		color: $blacker;
 		border: none;
 		cursor: auto;
@@ -86,16 +86,16 @@
 		&[type='number'] {
 			height    : 20px;
 
+      &:placeholder-shown {
+        border: 1px dotted $gray;
+        background-color: $graytrans;
+        color: white;
+      }
+
 			&:hover, 
       &:focus {
-				background-color: #d2d1cd;
+				background-color: $primary;
 				color: $blackish;
-			}
-
-			&:placeholder-shown {
-        border: 1px dotted $gray;
-				background-color: $graytrans;
-				color: white;
 			}
 		}
 
