--- a/Shadowrun4thEdition/src/scss/_pc.scss
+++ b/Shadowrun4thEdition/src/scss/_pc.scss
@@ -660,7 +660,7 @@
 
 				input[type='radio']:hover ~ h2 {
 					color      : #fff;
-					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $secondary;
+					text-shadow: 1px 1px 2px black, 0 0 25px $accent, 0 0 5px $secondary;
 				}
 
 				h2 {vertical-align: top;}
